<resources>
    <string name="app_name">Picture settings</string>
    <string name="not_supported_tv">The current TV model is not supported</string>
    <string name="adaptive_luma_control">Adaptive luma control</string>
    <string name="local_contrast_control">Local contrast control</string>
    <string name="noise_reduction">Noise reduction</string>
    <string name="video_preferences">Video preferences</string>
    <string name="backlight">Backlight</string>
    <string name="picture_mode">Picture mode</string>
    <string name="picture">Picture</string>
    <string name="advanced">Advanced</string>
    <string name="reset_to_default_message">Reset picture settings to default?</string>
    <string name="color_temperature">Color Temperature</string>
    <string name="reset_to_default">Reset to default</string>
    <string name="backlight_at_night">Dark mode backlight</string>
    <string name="brightness">Brightness</string>
    <string name="contrast">Contrast</string>
    <string name="saturation">Saturation</string>
    <string name="hue">HUE</string>
    <string name="sharpness">Sharpness</string>
    <string name="extra_dimming">Extra dimming</string>
    <string name="open_settings">Open settings</string>
    <string name="power_picture_off">Turn off the screen</string>
    <string name="adb_debugging_required">You need to enable USB debugging in developer options first.</string>
    <string name="wait_for_debug_window">In the next window, check "Always allow from this computer", then click OK.</string>
    <string name="dark_mode_full">Dark mode (backlight reduction + extra dimming)</string>
    <string name="dark_mode_off">Switching to day mode…</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="color_tuner">Color tuner</string>
    <string name="enable">Enable</string>
    <string name="please_wait">Please wait…</string>
    <string name="click_to_dark_mode">Click for dark mode</string>
    <string name="click_to_day_mode">Click for day mode</string>
    <string name="take_screenshot">Take a screenshot</string>
    <string name="day_mode_after_screen_on">Always turn off the dark mode after turning on the TV</string>
    <string name="dimming_power">Dimming power</string>
    <string name="dark_mode_preferences">Dark mode preferences</string>
    <string name="screenshot_saved">The screenshot has been saved in /Screenshots</string>
    <string name="yellow">Yellow</string>
    <string name="magenta">Magenta</string>
    <string name="flesh_tone">Flesh tone</string>
    <string name="cvan">Cyan</string>
    <string name="color_gain">Color gain</string>
    <string name="offset">Offset</string>
    <string name="scheduled_dark_mode">Scheduled dark mode</string>
    <string name="dark_mode_enable_time">Dark mode time</string>
    <string name="dark_mode_disable_time">Day mode time</string>
    <string name="reset_values">Reset to default</string>
    <string name="screen_capture_error_try_again">Screen capture error. Please try again</string>
    <string name="screen_filter_service">Screen filter</string>
    <string name="open_picture_settings">Open picture settings</string>
    <string name="white_balance">White balance</string>
    <string name="app_description">Version: %1s</string>
    <string name="color_gain_hint">The color gain preferences are not working properly. The best way to adjust the white balance is to use the corresponding settings in "Video preferences"</string>
    <string name="white_balance_hint">The default value is 1024</string>
    <string name="reset_to_default_1024">Reset to default</string>
    <string name="hold_to_toggle_extra_dimm_hint">Press and hold to toggle the additional dimming</string>
    <string name="fix_values">Fix the values above</string>
    <string name="custom_see_wb_settings">Custom (see the white balance settings)</string>
    <string name="fixed_see_wb_settings">Fixed (see the white balance settings)</string>
    <string name="activity_not_found">%1$s not found</string>
    <string name="step_by_step_dark_mode">Switch dark mode in three steps</string>
    <string name="click_to_turn_on_the_dark_filter">Click to turn on the dark filter</string>
    <string name="dark_mode_only_backlight">Dark mode (backlight reduction)</string>
    <string name="mode_cannot_be_applied">Backlight mode cannot be applied due to current system configuration</string>
    <string name="grant_permissions">Grant permissions</string>
    <string name="permissions_granted">Permissions granted</string>
</resources>