<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    app:title="@string/hue">
    <com.alexrcq.tvpicturesettings.ui.preference.ColorTunerSeekbarPreference
        app:key="tv_picture_color_tune_hue_blue"
        app:seekBarIncrement="1"
        app:showSeekBarValue="true"
        app:title="@string/blue" />
    <com.alexrcq.tvpicturesettings.ui.preference.ColorTunerSeekbarPreference
        app:key="tv_picture_color_tune_hue_cvan"
        app:seekBarIncrement="1"
        app:showSeekBarValue="true"
        app:title="@string/cvan" />
    <com.alexrcq.tvpicturesettings.ui.preference.ColorTunerSeekbarPreference
        app:key="tv_picture_color_tune_hue_flesh_tone"
        app:seekBarIncrement="1"
        app:showSeekBarValue="true"
        app:title="@string/flesh_tone" />
    <com.alexrcq.tvpicturesettings.ui.preference.ColorTunerSeekbarPreference
        app:key="tv_picture_color_tune_hue_green"
        app:seekBarIncrement="1"
        app:showSeekBarValue="true"
        app:title="@string/green" />
    <com.alexrcq.tvpicturesettings.ui.preference.ColorTunerSeekbarPreference
        app:key="tv_picture_color_tune_hue_megenta"
        app:seekBarIncrement="1"
        app:showSeekBarValue="true"
        app:title="@string/magenta" />
    <com.alexrcq.tvpicturesettings.ui.preference.ColorTunerSeekbarPreference
        app:key="tv_picture_color_tune_hue_red"
        app:seekBarIncrement="1"
        app:showSeekBarValue="true"
        app:title="@string/red" />
    <com.alexrcq.tvpicturesettings.ui.preference.ColorTunerSeekbarPreference
        app:key="tv_picture_color_tune_hue_yellow"
        app:seekBarIncrement="1"
        app:showSeekBarValue="true"
        app:title="@string/yellow" />
    <PreferenceCategory app:title="@string/advanced"/>
    <Preference
        app:key="reset_tuner_values"
        app:title="@string/reset_values"/>
</PreferenceScreen>