<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/white_balance">
    <com.alexrcq.tvpicturesettings.ui.preference.PersistentGlobalSeekbarPreference
        android:key="picture_red_gain"
        android:max="2047"
        android:title="@string/red" />
    <com.alexrcq.tvpicturesettings.ui.preference.PersistentGlobalSeekbarPreference
        android:key="picture_green_gain"
        android:max="2047"
        android:title="@string/green" />
    <com.alexrcq.tvpicturesettings.ui.preference.PersistentGlobalSeekbarPreference
        android:key="picture_blue_gain"
        android:max="2047"
        android:title="@string/blue" />
    <SwitchPreference
        android:defaultValue="false"
        android:key="fix_wb_values"
        android:title="@string/fix_values" />
    <Preference
        android:key="reset_values"
        android:title="@string/reset_to_default_1024"/>
    <Preference
        android:selectable="false"
        android:summary="@string/white_balance_hint"/>
</PreferenceScreen>