<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    app:title="@string/picture">
    <com.alexrcq.tvpicturesettings.ui.preference.LeanbackSeekbarPreference
        app:key="backlight"
        app:persistent="false"
        app:seekBarIncrement="1"
        app:showSeekBarValue="true"
        app:title="@string/backlight" />
    <Preference
        app:key="power_picture_off"
        app:title="@string/power_picture_off" />
    <ListPreference
        app:entries="@array/picture_mode"
        app:entryValues="@array/picture_mode_values"
        app:key="picture_mode"
        app:persistent="false"
        app:title="@string/picture_mode"
        app:useSimpleSummaryProvider="true" />
    <Preference
        app:key="take_screenshot"
        app:title="@string/take_screenshot" />
    <ListPreference
        app:entries="@array/picture_temperature"
        app:entryValues="@array/picture_temperature_values"
        app:key="temperature"
        app:persistent="false"
        app:title="@string/color_temperature"
        app:useSimpleSummaryProvider="true" />
    <Preference
        app:fragment="com.alexrcq.tvpicturesettings.ui.fragment.AdvancedVideoPreferenceFragment"
        app:key="advanced_video"
        app:title="@string/advanced_video" />
    <Preference
        app:key="reset_to_default"
        app:title="@string/reset_to_default" />
    <PreferenceCategory app:title="@string/dark_mode_settings" />
    <Preference
        app:fragment="com.alexrcq.tvpicturesettings.ui.fragment.ScheduledDarkModePreferenceFragment"
        app:key="scheduled_dark_mode"
        app:title="@string/scheduled_dark_mode" />
    <SwitchPreference
        app:defaultValue="false"
        app:key="is_enable_day_mode_after_screen_on_enabled"
        app:title="@string/day_mode_after_screen_on" />
    <com.alexrcq.tvpicturesettings.ui.preference.LeanbackSeekbarPreference
        app:key="ab_night_backlight"
        app:seekBarIncrement="1"
        app:showSeekBarValue="true"
        app:title="@string/backlight_at_night" />
    <SwitchPreference
        app:defaultValue="false"
        app:key="is_dark_filter_enabled"
        app:summary="@string/make_it_even_darker_summary"
        app:title="@string/extra_dimming" />
    <com.alexrcq.tvpicturesettings.ui.preference.LeanbackSeekbarPreference
        app:defaultValue="50"
        app:dependency="is_dark_filter_enabled"
        app:key="dark_filter_power"
        app:seekBarIncrement="1"
        app:showSeekBarValue="true"
        app:title="@string/dimming_power" />
</PreferenceScreen>