<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:title="@string/offset">
    <com.alexrcq.tvpicturesettings.ui.preference.ColorTunerSeekbarPreference
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:key="tuner_offset_red"
        app:seekBarIncrement="1"
        app:showSeekBarValue="true"
        app:title="@string/red" />
    <com.alexrcq.tvpicturesettings.ui.preference.ColorTunerSeekbarPreference
        app:key="tuner_offset_green"
        app:seekBarIncrement="1"
        app:showSeekBarValue="true"
        app:title="@string/green" />
    <com.alexrcq.tvpicturesettings.ui.preference.ColorTunerSeekbarPreference
        app:key="tuner_offset_blue"
        app:seekBarIncrement="1"
        app:showSeekBarValue="true"
        app:title="@string/blue" />
    <PreferenceCategory app:title="@string/advanced"/>
    <Preference
        app:key="reset_tuner_values"
        app:title="@string/reset_values"/>
</PreferenceScreen>