<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:title="@string/brightness">
    <SeekBarPreference
        app:defaultValue="50"
        app:key="tuner_brightness_blue"
        app:persistent="false"
        app:seekBarIncrement="1"
        app:showSeekBarValue="true"
        app:title="@string/blue"
        app:layout="@layout/leanback_seekbar_preference"/>
    <SeekBarPreference
        app:defaultValue="50"
        app:key="tuner_brightness_cvan"
        app:persistent="false"
        app:seekBarIncrement="1"
        app:showSeekBarValue="true"
        app:title="@string/cvan"
        app:layout="@layout/leanback_seekbar_preference"/>
    <SeekBarPreference
        app:defaultValue="50"
        app:key="tuner_brightness_flesh_tone"
        app:persistent="false"
        app:seekBarIncrement="1"
        app:showSeekBarValue="true"
        app:title="@string/flesh_tone"
        app:layout="@layout/leanback_seekbar_preference"/>
    <SeekBarPreference
        app:defaultValue="50"
        app:key="tuner_brightness_green"
        app:persistent="false"
        app:seekBarIncrement="1"
        app:showSeekBarValue="true"
        app:title="@string/green"
        app:layout="@layout/leanback_seekbar_preference"/>
    <SeekBarPreference
        app:defaultValue="50"
        app:key="tuner_brightness_magenta"
        app:persistent="false"
        app:seekBarIncrement="1"
        app:showSeekBarValue="true"
        app:title="@string/magenta"
        app:layout="@layout/leanback_seekbar_preference"/>
    <SeekBarPreference
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:key="tuner_brightness_red"
        app:defaultValue="50"
        app:persistent="false"
        app:seekBarIncrement="1"
        app:showSeekBarValue="true"
        app:title="@string/red"
        app:layout="@layout/leanback_seekbar_preference"/>
    <SeekBarPreference
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:defaultValue="50"
        app:key="tuner_brightness_yellow"
        app:persistent="false"
        app:seekBarIncrement="1"
        app:showSeekBarValue="true"
        app:title="@string/yellow"
        app:layout="@layout/leanback_seekbar_preference"/>
    <Preference
        app:key="tuner_brightness_reset"
        app:title="@string/reset"/>
</PreferenceScreen>