<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:title="@string/advanced_video">
    <Preference
        app:fragment="com.alexrcq.tvpicturesettings.ui.fragment.ColorTunerPreferenceFragment"
        app:key="color_tuner"
        app:title="@string/color_tuner"/>
    <ListPreference
        app:persistent="false"
        app:title="@string/noise_reduction"
        app:key="noise_reduction"
        app:entries="@array/picture_advanced_video_noise_reduction_entries"
        app:entryValues="@array/picture_advanced_video_noise_reduction_values"
        app:useSimpleSummaryProvider="true"/>
    <SwitchPreference
        app:persistent="false"
        app:title="@string/adaptive_luma_control"
        app:key="adaptive_luma_control" />
    <SwitchPreference
        app:persistent="false"
        app:title="@string/local_contrast_control"
        app:key="local_contrast_control" />
    <SwitchPreference
        android:key="hdr"
        android:persistent="false"
        android:title="HDR" />
</PreferenceScreen>